# Kimi-Voxel

./: Cargo.toml  README.md  collect_gpu_code.py  gpu_code.txt
assets/blocks/: README.md  default_blocks.json  example_mod.json  street_art.json  worldgen.json
src/: main.rs
src/gpu/: mod.rs
src/gpu/audio/: components.rs  environment.rs  mod.rs  resources.rs  utils.rs
src/gpu/audio/systems/: footstep.rs  jump.rs  mod.rs  place_block.rs
src/gpu/biomes/: climate.rs  features.rs  foliage.rs  mod.rs  registry.rs  selector.rs  terrain_gen.rs  types.rs
src/gpu/blocks/: block_breaker.rs  definition.rs  mod.rs  registry.rs  texture_atlas.rs  types.rs  worldgen.rs
src/gpu/core/: app.rs  config.rs  mod.rs  resources.rs
src/gpu/gui/: crosshair.rs  fps_counter.rs  menu.rs  menu.wgsl  mod.rs  text.rs
src/gpu/gui/hotbar/: hotbar.wgsl  mod.rs  render.rs
src/gpu/gui/inventory/: inventory.wgsl  mod.rs  render.rs
src/gpu/lighting/: cascade.rs  celestial.rs  celestial_render.rs  csm.rs  light.rs  mod.rs  shadow.wgsl  shadow_map.rs  shadow_sampling.wgsl
src/gpu/player/: camera.rs  flight.rs  mod.rs  player.rs  player.wgsl  player_model.rs
src/gpu/render/: bind_groups.rs  depth.rs  mod.rs  pipelines.rs  shadow.rs  uniforms.rs
src/gpu/render/renderer/: mod.rs
src/gpu/save/: chunk.rs  header.rs  mod.rs  palette.rs  world_file.rs
src/gpu/shaders/: celestial.wgsl  highlight.wgsl  terrain.wgsl  terrain_shadows.wgsl  ui.wgsl
src/gpu/subvoxel/: components.rs  mod.rs  subvoxel.rs  subvoxel_render.rs
src/gpu/subvoxel/chunk/: key.rs  mod.rs  sparse_storage.rs  storage.rs
src/gpu/subvoxel/meshing/: chunk_grid.rs  chunk_mesher.rs  greedy.rs  mask_greedy.rs  mod.rs  octree_mesher.rs  packed_vertex.rs  vertex.rs
src/gpu/subvoxel/octree/: compact.rs  linear.rs  mod.rs
src/gpu/subvoxel/render/: mod.rs  renderer.rs
src/gpu/subvoxel/systems/: mesh.rs  mesh_system.rs  mod.rs  placement.rs  raycast.rs
src/gpu/systems/: block_interaction_system.rs  init_system.rs  input_system.rs  menu_system.rs  mod.rs  render_system.rs  save_system.rs  update_system.rs
src/gpu/terrain/: mod.rs  world_changes.rs
src/gpu/terrain/cache/: chunk_key.rs  mod.rs
src/gpu/terrain/generation/: caves.rs  color.rs  height.rs  mod.rs  noise.rs
src/gpu/terrain/gpu/: chunk.rs  manager.rs  mod.rs
src/gpu/terrain/lod/: levels.rs  mod.rs
src/gpu/terrain/manager/: mod.rs  section.rs
src/gpu/terrain/mesh/: mod.rs  (+1 more)
(+24 files in other folders)
